# service-jehlomat/src/main/resources/files/swagger.yaml
@@ -62,6 +62,29 @@ paths:
             $ref: '#/definitions/Organization'
         '404':
           description: Organization not found
+  /organization/{id}/users:
+    get:
+      summary: Get organization users
+      description: Returns a list of users in the requested organization
+      produces:
+        - application/json
+      security:
+        - Bearer: []
+      parameters:
+        - name: id
+          in: path
+          description: Id of organization
+          required: true
+          type: integer
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/UserInfo'
+        '404':
+          description: Organization not found
   /organization/:
     get:
       summary: Get all organizations
